Fix titles on mobile (see long description)
Before: http://i.gyazo.com/38611b9b9be45b8f9201c13d1cf14612.png
After: http://i.gyazo.com/18b79c9a4bc4ebb90b6dcec7bcb77ecc.png

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -59,6 +59,9 @@ p {
   font-size: 2.8em;
   padding: .2em .4em;
   margin: 0 0 .25em 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 @media (max-width: 44.9375em) {
   .site-hed {
